Thu Jun 28 02:12:08 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/runner.rb: fix to untouch $:.

Thu Jun 28 02:03:07 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (setup_args): change parameter type.

Thu Jun 28 02:03:39 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* parse.y (rb_intern2): unconstify cast.

Thu Jun 28 01:44:31 2007  Tanaka Akira  <akr@fsij.org>

	* parse.y (rb_intern2): don't allocate a string object at first.
	  [ruby-dev:31064]

Thu Jun 28 01:24:02 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/runner.rb: fix to show file name.

	* bootstraptest/test_*.rb: add bootstarp tests.

Thu Jun 28 01:22:15 2007  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/node.h, parse.y, gc.c, iseq.c: remove NODE_CREF.

Thu Jun 28 01:19:43 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): fix popped backref and others.
	  ([ruby-dev:31068]).

	* compile.c (iseq_compile_each): remove needless statements.

Wed Jun 27 23:51:33 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c: remove unused functions.

Wed Jun 27 20:46:05 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h, win32/Makefile.sub, win32/configure.bat,
	  win32/mkexports.rb, win32/setup.mak, win32/win32.c: import
	  x64-mswin64 port.

Wed Jun 27 20:31:07 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_translate_direct_threaded_code): fix prototype
	  function name.

	* vm.h: add correct cast.

Wed Jun 27 17:08:42 2007  Koichi Sasada  <ko1@atdot.net>

	* vm_evalbody.ci: support OPT_CALL_THREADED_CODE.

	* insns.def, vm.c, vm.h: ditto.

	* vm.h: add VM_CFP_CNT() and VM_SP_CNT().

Wed Jun 27 04:23:47 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): fix type error.

Wed Jun 27 03:26:15 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (compile_massign), insns.def (expandarray): support 
	  postarg with massign (a, *b, c = ...).

	* bootstraptest/test_massign.rb: add tests for above.
