@@ -1,3 +1,11 @@
+Thu Jun 28 05:01:56 2007  Koichi Sasada  <ko1@atdot.net>
+
+	* common.mk (run.gdb): fix to load $(srcdir)/.gdbinit
+
+	* vm.c (rb_vm_set_finish_env): add a cast.
+
+	* vm.h: support __fastcall for MSVC.
+
 Thu Jun 28 02:12:08 2007  Koichi Sasada  <ko1@atdot.net>
 
 	* bootstraptest/runner.rb: fix to untouch $:.
